# DA34-final-trois-blackmamba_api

./: Dockerfile  Dockerfile.cloud  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
api/: db.py  main.py  migrate_cloud_db.py  migrate_db.py
api/cruds/: car.py  device.py
api/models/: car.py  device.py
api/routers/: car.py  device.py  talk_history.py
api/schemas/: car.py  device.py
mig/: car.csv  mig.py
